fixing margin collapse on animation

--- a/css/tf.css
+++ b/css/tf.css
@@ -32,7 +32,7 @@
 	position:relative;
 }
 
-.tf-height-check {
+.tf-height-check, .tf-block {
 	overflow: auto;	
 }
 
